# mini-gdbstub

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  basic_test.sh
.ci/: common.sh  gdbstub_bp_test.sh  gdbstub_cont_test.sh  gdbstub_detach_test.sh  gdbstub_noack_test.sh  gdbstub_regwrite_bulk_reject_test.sh  gdbstub_regwrite_bulk_roundtrip_test.sh  gdbstub_regwrite_single_test.sh  gdbstub_regwrite_test.sh  gdbstub_wp_test.sh  riscv-toolchain-install.sh  run-tests.sh  test_common.sh
.github/workflows/: build-check.yml  format-check.yml  tests.yml
cmake/: install_action.cmake  mini-gdbstubConfig.cmake.in
emu/: Makefile  emu.c
emu/src/: emu.c
emu/test/: test.s
emu/tests/: test.c
include/: arch.h  conn.h  gdb_signal.h  gdbstub.h  packet.h  pktqueue.h  regbuf.h  utils.h
include/utils/: csum.h  log.h  translate.h
lib/: conn.c  gdbstub.c  packet.c  regbuf.c  utils.c
lib/utils/: csum.c  log.c  translate.c
scripts/: clang-format-file.sh  pre-commit.hook  remote-start.gdb
src/: conn.c  gdbstub.c  packet.c  pktqueue.c
src/utils/: translate.c
tests/: test.c
